--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "KarlaMedium";
+  src: local("KarlaMedium"),
+   url("./fonts/Karla/Karla-Medium.ttf") format("truetype");
+ }
+
+@font-face {
+  font-family: "KarlaRegular";
+  src: local("KarlaRegular"),
+   url("./fonts/Karla/Karla-Regular.ttf") format("truetype");
+ }
+
+ @font-face {
+  font-family: "KarlaBold";
+  src: local("KarlaBold"),
+   url("./fonts/Karla/Karla-Bold.ttf") format("truetype");
+   font-weight: bold;
+ }
+
+ @font-face {
+  font-family: "KarlaExtraBold";
+  src: local("KarlaExtraBold"),
+   url("./fonts/Karla/Karla-ExtraBold.ttf") format("truetype");
+ }
+
+ @font-face {
+  font-family: "MarkaziText";
+  src: local("MarkaziText"),
+   url("./fonts/MarkaziText/MarkaziText-Medium.ttf") format("truetype");
+ }
