--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,15 @@ body {
   padding: 5rem 20% 5rem 20%;
 }
 
+.page-heading-container {
+  padding: 5rem 20% 5rem 20%;
+  background-image: url("../src/assets/restaurant.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: #495E57;
+}
+
 header {
   display: flex;
   flex-wrap: wrap;
@@ -82,26 +91,31 @@ a {
   font-size: 16pt;
 }
 
+.nav-item-header {
+  font-family: 'KarlaBold';
+  color: black;
+  font-size: 16pt;
+  padding: 12px;
+  text-decoration: none;
+}
+
+.footer-nav-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-item-footer {
+  font-family: 'KarlaRegular';
+  font-size: 16pt;
+  color: black;
+  text-decoration: none;
+}
+
 footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 3rem 20% 3rem 20%;
-}
-
-.footer-nav-list {
-  list-style: none;
-  font-family: 'KarlaRegular';
-  font-size: 16pt;
-  line-height: 1.5;
-  max-width: 65ch;
-}
-
-.footer-nav-list > li > a {
-  font-family: 'KarlaRegular';
-  font-size: 16pt;
-  line-height: 1.5;
-  max-width: 65ch;
 }
 
 #footer-logo {
@@ -117,11 +131,21 @@ footer {
   padding-right: 8px;
 }
 
+.row-page-heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+.page-heading-text {
+  flex: 1;
 }
 
 .testimonial-container {
@@ -131,13 +155,29 @@ footer {
   justify-content: space-between;
 }
 
-
 .row-spaced {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
-  align-items: left;
-  justify-content: center;
+  min-height: 220px;
+  justify-content: space-between;
+}
+
+.specials-text {
+  padding: 20px;
+}
+
+.order-link {
+  padding-left: 20px;
+  color: black;
+  text-decoration: none;
+}
+
+.link-to-res {
+  font-family: 'KarlaBold';
+  color: black;
+  font-size: 16pt;
+  text-decoration: none;
 }
 
 .column {
@@ -168,10 +208,6 @@ footer {
 
 .text-left {
   padding: 20px 20px 20px 0;
-}
-
-.order-link {
-  padding-left: 20px;
 }
 
 .bg-green {
