bookingform styling is completed

--- a/src/App.css
+++ b/src/App.css
@@ -311,4 +311,67 @@ header nav li {
   padding: 20px;
 }
 
+.form-style {
+  width: 100%;
+  flex-wrap: nowrap;
+  gap: 20px;
+}
 
+.row-form {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width: 100%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.column-form-icon {
+  width: 10%;
+}
+
+.column-form-input {
+  width: 90%;
+}
+
+label {
+  display: block;
+  font-family: "KarlaBold";
+  font-size: 18pt;
+  color: #495E57;
+  padding-bottom: 20px;
+}
+
+input {
+  display: block;
+  font-family: "KarlaRegular";
+  font-size: 18pt;
+  color: black;
+  padding: 12px;
+  width: 60%;
+  border-radius: 16px;
+}
+
+select {
+  font-family: "KarlaRegular";
+  font-size: 18pt;
+  color: black;
+  padding: 10px;
+  width: 62%;
+  border-radius: 16px;
+}
+
+textarea {
+  display: block;
+  width: 60%;
+  font-family: "KarlaRegular";
+  font-size: 18pt;
+  color: black;
+  padding: 10px;
+  border-radius: 16px;
+}
+
+.input-submit {
+  width: 66%;
+  margin-bottom: 5rem;
+}
